--- a/Services/Order/Presentation/CasgemMicroservice.Services.Order.Presentation.Api/CasgemMicroservice.Services.Order.Presentation.Api.csproj
+++ b/Services/Order/Presentation/CasgemMicroservice.Services.Order.Presentation.Api/CasgemMicroservice.Services.Order.Presentation.Api.csproj
@@ -5,11 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.1.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <ProjectReference Include="..\..\Core\CasegmMicroservice.Serives.Order.Core.Application\CasegmMicroservice.Serives.Order.Core.Application.csproj" />
   </ItemGroup>
 
 </Project>
