--- a/Services/Order/Infrastructes/CasgemMicroservice.Infrastructure.Persistance/CasgemMicroservice.Infrastructure.Persistance.csproj
+++ b/Services/Order/Infrastructes/CasgemMicroservice.Infrastructure.Persistance/CasgemMicroservice.Infrastructure.Persistance.csproj
@@ -4,4 +4,22 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.17" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.17">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.17" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.17">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\CasegmMicroservice.Serives.Order.Core.Application\CasegmMicroservice.Serives.Order.Core.Application.csproj" />
+    <ProjectReference Include="..\..\Core\CasgemMicroservice.Services.Order.Core.Domain\CasgemMicroservice.Services.Order.Core.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
