--- a/Services/Order/Presentation/CasgemMicroservice.Services.Order.Presentation.Api/CasgemMicroservice.Services.Order.Presentation.Api.csproj
+++ b/Services/Order/Presentation/CasgemMicroservice.Services.Order.Presentation.Api/CasgemMicroservice.Services.Order.Presentation.Api.csproj
@@ -6,11 +6,16 @@
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="12.1.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.17">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\Core\CasegmMicroservice.Serives.Order.Core.Application\CasegmMicroservice.Serives.Order.Core.Application.csproj" />
+    <ProjectReference Include="..\..\Infrastructes\CasgemMicroservice.Infrastructure.Persistance\CasgemMicroservice.Infrastructure.Persistance.csproj" />
   </ItemGroup>
 
 </Project>
